crates/wac-parser/tests/resolution/fail/import-duplicate-name.wac
package test:comp;

import x as "foo": func();
import y as "foo": interface {};
